recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: not found: value levels
    sierpinski(levels-1, length/2);
               ^Sierpinski:6: error: not found: value levels
    sierpinski(levels-1, length/2);
               ^Sierpinski:8: error: not found: value levels
    sierpinski(levels-1, length/2);
               ^