recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (level == 0) {
    forward(length);
  } else {
    sierpinski(levels-1, length/2);
    right(120);
    sierpinski(levels-1, length/2);
    right(120);
    sierpinski(levels-1, length/2);
    right(120);
  }
}